WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
94906
[EFL][WK2] Fix PageClientImpl layer violation
https://bugs.webkit.org/show_bug.cgi?id=94906
Summary
[EFL][WK2] Fix PageClientImpl layer violation
Kangil Han
Reported
2012-08-23 23:19:28 PDT
Compared to other ports, i.e. mac and gtk+, ours has WebContext reference in PageClientImpl. It seems not necessary because WebContext is singleton and PageClientImpl could be implemented with view only. Having different implementation to gtk+ isn't be our policy too.
Attachments
patch
(19.89 KB, patch)
2012-08-24 04:37 PDT
,
Kangil Han
no flags
Details
Formatted Diff
Diff
patch
(19.94 KB, patch)
2012-08-24 05:06 PDT
,
Kangil Han
no flags
Details
Formatted Diff
Diff
patch
(19.80 KB, patch)
2012-08-24 05:58 PDT
,
Kangil Han
gyuyoung.kim
: review-
gyuyoung.kim
: commit-queue-
Details
Formatted Diff
Diff
patch
(19.85 KB, patch)
2012-08-27 22:30 PDT
,
Kangil Han
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Kangil Han
Comment 1
2012-08-24 04:37:20 PDT
Created
attachment 160393
[details]
patch
Kangil Han
Comment 2
2012-08-24 05:06:14 PDT
Created
attachment 160398
[details]
patch rebase
Kangil Han
Comment 3
2012-08-24 05:58:33 PDT
Created
attachment 160406
[details]
patch rebase again.
Kangil Han
Comment 4
2012-08-24 06:31:35 PDT
ryuan: review please?
Chris Dumez
Comment 5
2012-08-24 06:42:51 PDT
Comment on
attachment 160406
[details]
patch LGTM. Does it stop complaining about the WebContext being leaked now?
Kangil Han
Comment 6
2012-08-24 06:50:16 PDT
(In reply to
comment #5
)
> (From update of
attachment 160406
[details]
) > LGTM. Does it stop complaining about the WebContext being leaked now?
Unfortunately, nope. :-( WebProcessProxy has the key for resolving WebContext leak but seems WebProcess didn't do anything for it. To fix it I should discuss more with apple people.
Ryuan Choi
Comment 7
2012-08-25 06:22:54 PDT
Comment on
attachment 160406
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=160406&action=review
> Source/WebKit2/UIProcess/API/efl/ewk_view.cpp:191 > + priv->pageProxy.get()->viewStateDidChange(WebPageProxy::ViewIsFocused | WebPageProxy::ViewWindowIsActive);
I think that .get() is unnecessary when you call a method.
Raphael Kubo da Costa (:rakuco)
Comment 8
2012-08-26 15:16:14 PDT
Comment on
attachment 160406
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=160406&action=review
> Source/WebKit2/ChangeLog:10 > + Given WK2 hierarchy, current PageClientImpl has violated API layer by having WebPageProxy. > + Subsequently, it has been given WebContext, static singleton object, in its argument unnecessarily. > + Therefore, this patch fixed addressed issues and let view has WebPageProxy as other ports, i.e. mac and gtk+, does currently.
It'd be good to explain how those arguments that have been removed from PageClientImpl's constructor are supposed to be retrieved now, as well as add a short indication of what has been done to the methods below when there's been more than a search-and-replace change.
Gyuyoung Kim
Comment 9
2012-08-26 17:58:42 PDT
Comment on
attachment 160406
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=160406&action=review
> Source/WebKit2/UIProcess/API/efl/PageClientImpl.h:46 > + PageClientImpl(Evas_Object*);
Missing *explicit* keyword.
Kangil Han
Comment 10
2012-08-27 22:30:41 PDT
Created
attachment 160900
[details]
patch Done. Thanks!
Ryuan Choi
Comment 11
2012-08-27 22:37:03 PDT
(In reply to
comment #10
)
> Created an attachment (id=160900) [details] > patch > > Done. Thanks!
Looks good to me.
Gyuyoung Kim
Comment 12
2012-08-27 22:44:52 PDT
Comment on
attachment 160900
[details]
patch LGTM.
WebKit Review Bot
Comment 13
2012-08-27 23:28:05 PDT
Comment on
attachment 160900
[details]
patch Clearing flags on attachment: 160900 Committed
r126844
: <
http://trac.webkit.org/changeset/126844
>
WebKit Review Bot
Comment 14
2012-08-27 23:28:09 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug